--- a/app/src/main/res/layout/activity_refresh_list_view.xml
+++ b/app/src/main/res/layout/activity_refresh_list_view.xml
@@ -5,7 +5,7 @@
     android:orientation="vertical"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context="com.johan.viewtoolkit.MainActivity">
+    tools:context="com.johan.viewtoolkit.RefreshListViewActivity">
 
     <View
         android:layout_width="match_parent"
